--- a/css/support.css
+++ b/css/support.css
@@ -1,24 +1,8 @@
-* { box-sizing: border-box; 
-    margin: 0;
-     padding: 0;}
+
 
 body { font-family: cursive;
     font-style: italic;
- font-size: 100%;
-margin: 0;
-     padding: 0;}
-/
-h2{ position: absolute;
- top: 0px;
-  right:0px;
-  margin: 0;
-     padding: 0;
-   float: none;
-    width: 140px;
-     height: 35px;
-      border:1px solid black;
-       text-align:center; 
-        }
+ font-size: 100%;}
 
 h1{ text-align: center; 
     margin-top: 5%; 
@@ -27,10 +11,10 @@ h1{ text-align: center;
 .section { 
  position: relative; 
  color: black; 
- background-color:lightgrey;
- border:3px solid black; 
+ background-color:grey;
+ border:5px solid black; 
  margin: 10px;
-padding-top: 0px;
+padding: 0px;
   } 
 
  .chicken{ background-color: darkred; 
@@ -39,8 +23,8 @@ padding-top: 0px;
      
     text-align: center;
 float: right;
-margin-top: 0px;
-margin-right: 0px;
+margin: 0px;
+
 padding: 0px;} 
 
  .beef{  background-color: yellowgreen; 
@@ -49,8 +33,7 @@ padding: 0px;}
      
     text-align: center;
 float: right;
-margin-top: 0px;
-margin-right: 0px;
+margin: 0px;
 padding: 0px;} 
 
  .sushi{  background-color: skyblue; 
@@ -60,8 +43,7 @@ padding: 0px;}
      
     text-align: center;
 float: right;
-margin-top: 0px;
-margin-right: 0px;
+margin: 0px;
 padding: 0px; }
 
 .p1{clear: right;}
