--- a/css/support.css
+++ b/css/support.css
@@ -5,8 +5,20 @@
 body { font-family: cursive;
     font-style: italic;
  font-size: 100%;
-}
-
+margin: 0;
+     padding: 0;}
+/
+h2{ position: absolute;
+ top: 0px;
+  right:0px;
+  margin: 0;
+     padding: 0;
+   float: none;
+    width: 140px;
+     height: 35px;
+      border:1px solid black;
+       text-align:center; 
+        }
 
 h1{ text-align: center; 
     margin-top: 5%; 
@@ -57,7 +69,7 @@ padding: 0px; }
 .p3{clear: right;}
  @media (min-width: 992px) 
  { .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 
-    { float: left; margin: auto; }
+    { float: left; margin: 0px; }
 .col-lg-1 { width: 8.33%; } 
 .col-lg-2 { width: 16.66%; } 
  .col-lg-3 { width: 25%; } 
@@ -73,7 +85,7 @@ padding: 0px; }
 
          @media (min-width: 768px) and (max-width: 991px)
  { .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 
-      { float: left; margin: auto; } 
+      { float: left; margin: 0px; } 
    .col-md-1 { width: 8.33%; } 
    .col-md-2 { width: 16.66%; }
    .col-md-3 { width: 25%; }
@@ -89,7 +101,7 @@ padding: 0px; }
 
 @media (max-width: 767px){
  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12
-  { float: left; margin: auto; }
+  { float: left; margin: 0px; }
 
 .col-sm-1 { width: 8.33%; }
  .col-sm-2 { width: 16.66%; } 
