--- a/css/support.css
+++ b/css/support.css
@@ -1,117 +1,93 @@
-* { box-sizing: border-box; 
-    margin: 0;
-     padding: 0;}
+h1{
+    background-color:orange;
+    padding:10px;
+    
+    text-align:center; 
+    border-radius:8px;
+    margin:0px;
+}
+.n{background-color:slateblue;
+padding:4px;}
+.o{background-color:pink;
+padding:4px;}
+.q{background-color:maroon;
+padding:4px;}
+.m{
+    background-color:green;
+    padding:4px;
+}
+ul{
+    background-color:gray;
+    font-family:cursive;
+    margin:0px;
+}
+.btn{
 
-body { font-family: cursive;
-    font-style: italic;
- font-size: 100%;
-margin: 0;
-     padding: 0;}
-
-h2{ position: absolute;
- top: 0px;
-  right:0px;
-  margin: 0;
-     padding: 0;
-   float: none;
-    width: 140px;
-     height: 35px;
-      border:1px solid black;
-       text-align:center; 
-        }
-
-h1{ text-align: center; 
-    margin-top: 5%; 
-    margin-bottom: 5%; }
-
-.section { 
- position: relative; 
- color: black; 
- background-color:lightgrey;
- border:3px solid black; 
- margin: 10px;
-padding-top: 0px;
-  } 
-
- .chicken{ background-color: darkred; 
-      width: 40%;
-    border: 3px solid black;
-     
-    text-align: center;
-float: right;
-margin-top: 0px;
-margin-right: 0px;
-padding: 0px;} 
-
- .beef{  background-color: yellowgreen; 
-      width: 40%;
-    border: 3px solid black;
-     
-    text-align: center;
-float: right;
-margin-top: 0px;
-margin-right: 0px;
-padding: 0px;} 
-
- .sushi{  background-color: skyblue; 
-    width: 40%;
-    position: relative;
-    border: 3px solid black;
-     
-    text-align: center;
-float: right;
-margin-top: 0px;
-margin-right: 0px;
-padding: 0px; }
-
-.p1{clear: right;}
-.p2{clear: right;}
-.p3{clear: right;}
- @media (min-width: 992px) 
- { .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 
-    { float: left; margin: 0px; }
-.col-lg-1 { width: 8.33%; } 
-.col-lg-2 { width: 16.66%; } 
- .col-lg-3 { width: 25%; } 
- .col-lg-4 { width: 33.33%; }
-.col-lg-5 { width: 41.66%; }
- .col-lg-6 { width: 50%; }
-.col-lg-7 { width: 58.33%; }
- .col-lg-8 { width: 66.66%; } 
-.col-lg-9 { width: 74.99%; }
- .col-lg-10 { width: 83.33%; }
-  .col-lg-11 { width: 91.66%; } 
-        .col-lg-12 { width: 100%; }}
-
-         @media (min-width: 768px) and (max-width: 991px)
- { .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 
-      { float: left; margin: 0px; } 
-   .col-md-1 { width: 8.33%; } 
-   .col-md-2 { width: 16.66%; }
-   .col-md-3 { width: 25%; }
-  .col-md-4 { width: 33.33%; }
-  .col-md-5 { width: 41.66%; } 
-   .col-md-6 { width: 50%; }
-    .col-md-7 { width: 58.33%; } 
-   .col-md-8 { width: 66.66%; } 
- .col-md-9 { width: 74.99%; } 
-   .col-md-10 { width: 83.33%; } 
- .col-md-11 { width: 91.66%; }
-  .col-md-12 { width: 100%; }} 
-
-@media (max-width: 767px){
- .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12
-  { float: left; margin: 0px; }
-
-.col-sm-1 { width: 8.33%; }
- .col-sm-2 { width: 16.66%; } 
-.col-sm-3 { width: 25%; }
-.col-sm-4 { width: 33.33%; } 
- .col-sm-5 { width: 41.66%; } 
- .col-sm-6 { width: 50%; }
- .col-sm-7 { width: 58.33%; }
-.col-sm-8 { width: 66.66%; }
- .col-sm-9 { width: 74.99%; }
- .col-sm-10 { width: 83.33%; } 
-.col-sm-11 { width: 91.66%; } 
-.col-sm-12 { width: 100%; }}
+display: inline-block;
+    color: white;
+    font-weight: 1000;
+    font-size: 30px;
+    background: black;
+    
+    border-radius: 5px;
+    
+    font-family:cursive;
+}
+.btn:hover {
+    background: #468486;
+}
+.header{
+    text-align:center ;
+    background-color:maroon;
+    margin:0px;
+}
+li{
+    padding:10px;
+    margin:2px;
+    border-radius:7px;
+    background-color:blue;
+}
+a{
+    font-size:19px;
+    border-radius:7px;
+    padding:10px;
+    margin:6px;
+    color:white;
+}
+.footer{
+    background-color:orange;
+    border-radius:5px;
+    margin:0px;
+    text-align:center ;
+}
+p{
+    font-family:cursive;
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
+    border-radius:7px;
+    margin:27px;
+}
+.middle {
+    background-color:yellow;
+}
+.f{
+    background-color:tomato;
+    padding:4px;
+}
+.s{
+    background-color:violet;
+    padding:4px;
+}
+.r{
+    background-color:yellow;
+    padding:5px;
+    color:green;
+}
+@media screen and (max-width: 600px) {
+   body {
+     background-color: black;
+     margin:auto;
+  }
+}
